--- a/css/styles.css
+++ b/css/styles.css
@@ -193,10 +193,13 @@ ul {
 
 /* Hero */
 .hero-section {
-  /* background-color: var(--dark-bg-color); */
+  background-position: center;
+
+  background-image: url(../images/Hero/bg-hero.jpg);
+  background-repeat: no-repeat;
+  background-color: var(--dark-bg-color);
   padding-top: 200px;
   padding-bottom: 200px;
-  border-image: url(../images/Hero/bg-hero.jpg);
 }
 
 .hero-title {
@@ -643,10 +646,20 @@ ul {
 .filters-items-button:hover {
   background: var(--accent-color);
   color: #fff;
+
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08),
+    0 3px 1px 0 rgba(0, 0, 0, 0.1);
+
+  border-radius: 4px;
 }
 .filters-items-button:focus {
   background: var(--accent-color);
   color: #fff;
+
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08),
+    0 3px 1px 0 rgba(0, 0, 0, 0.1);
+
+  border-radius: 4px;
 }
 
 .filters-items-button-accent {
@@ -667,6 +680,24 @@ ul {
   padding-right: 25px;
   padding-left: 25px;
 }
+.filters-items-button-accent:hover {
+  background: var(--accent-color);
+  color: #fff;
+
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08),
+    0 3px 1px 0 rgba(0, 0, 0, 0.1);
+
+  border-radius: 4px;
+}
+.filters-items-button-accent:focus {
+  background: var(--accent-color);
+  color: #fff;
+
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08),
+    0 3px 1px 0 rgba(0, 0, 0, 0.1);
+
+  border-radius: 4px;
+}
 /* Portfolio items */
 
 .portfoli-item-link {
@@ -679,10 +710,23 @@ ul {
 }
 .portfolio-item {
   width: 370px;
-  /* box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25); */
 
   margin-bottom: 30px;
   margin-right: 30px;
+}
+.portfolio-item:hover {
+  box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.06),
+    0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  background: #fff;
+  border: 1px solid #eee;
+  width: 370px;
+}
+.portfolio-item:focus {
+  box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.06),
+    0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  background: #fff;
+  border: 1px solid #eee;
+  width: 370px;
 }
 .portfolio-item:nth-last-child(3n + 1) {
   margin-right: 0;
