--- a/css/styles.css
+++ b/css/styles.css
@@ -193,10 +193,13 @@ ul {
 
 /* Hero */
 .hero-section {
-  background-position: center;
+  background: rgba(47, 48, 58, 0.4);
 
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
   background-image: url(../images/Hero/bg-hero.jpg);
-  background-repeat: no-repeat;
+
   background-color: var(--dark-bg-color);
   padding-top: 200px;
   padding-bottom: 200px;
