--- a/css/styles.css
+++ b/css/styles.css
@@ -193,12 +193,11 @@ ul {
 
 /* Hero */
 .hero-section {
-  background: rgba(47, 48, 58, 0.4);
-
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
-  background-image: url(../images/Hero/bg-hero.jpg);
+  background-image: url(../images/Hero/Img\ Overlay.png),
+    url(../images/Hero/bg-hero.jpg);
 
   background-color: var(--dark-bg-color);
   padding-top: 200px;
