--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ img {
 }
 
 .container {
-  /* border: 1px solid red; */
+  border: 1px solid red;
   width: 1200px;
 
   padding-left: 15px;
@@ -239,10 +239,25 @@ ul {
   background-color: #1875c1;
 }
 /* Our activity */
+
 .our-activity-section {
   background: var(--main-bg-color);
   padding-top: 94px;
 }
+.our-acyivity-icon-list {
+  display: flex;
+}
+
+.our-acyivity-icon {
+  width: 270px;
+  height: 120px;
+  background-color: #f5f4fa;
+  text-align: center;
+
+  margin-bottom: 30px;
+  margin-right: 30px;
+}
+
 .our-activity-list {
   display: flex;
 }
@@ -445,6 +460,7 @@ ul {
   line-height: normal;
   letter-spacing: 0.48px;
 }
+
 .ul-designer-name {
   text-align: center;
   font-size: 16px;
@@ -460,12 +476,54 @@ ul {
   line-height: normal;
   letter-spacing: 0.48px;
 }
+/* social links */
+.team-social-link-list {
+  display: flex;
+  justify-content: center;
+
+  width: 206px;
+  height: 44px;
+
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.team-social-link-item {
+  text-align: center;
+
+  background-color: #d41111;
+
+  margin-top: 16px;
+  margin-right: 10px;
+}
 
 /* Regular customers  */
 .regular-customers-section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+
+.regular-customers-icon-list {
+  display: flex;
+
+  margin-left: auto;
+  margin-right: auto;
+
+  margin-top: 50px;
+  padding-bottom: 94px;
+}
+
+.regular-customers-icon {
+  text-align: center;
+  width: 170px;
+  height: 92px;
+  background-color: #d41111;
+  margin-right: 30px;
+}
+.regular-customers-icon:last-child {
+  margin-right: 0;
+}
+
 .regular-customers-titel {
   font-family: var(--main-font);
   font-weight: 700;
@@ -496,7 +554,7 @@ ul {
 }
 .logo-footer-accent {
   color: var(--accent-color);
-  font-family: Raleway bold;
+  font-family: var(--secondary-font);
   font-size: 26px;
   font-weight: 700;
   line-height: normal;
@@ -505,6 +563,7 @@ ul {
 .footer-text {
   font-style: normal;
   color: #fff;
+  margin-right: 70px;
 
   letter-spacing: 0.42px;
 
@@ -537,6 +596,25 @@ ul {
 }
 .footer-link:focus {
   color: var(--accent-color);
+}
+
+/* Footer icons */
+
+.footer-container {
+}
+
+.footer-icons {
+}
+.footer-icon-link-title {
+  color: #fff;
+  /* margin-bottom: 20px; */
+}
+.footer-sicial-icon-list {
+  display: flex;
+}
+.footer-sicial-icon {
+  color: #fff;
+  margin-right: 10px;
 }
 
 /* portfolio */
