--- a/css/styles.css
+++ b/css/styles.css
@@ -253,15 +253,13 @@ ul {
 .our-activity-icon {
   border-radius: 4px;
   width: 270px;
-  /* height: 120px; */
+
   background: #f5f4fa;
   margin-right: 30px;
   margin-bottom: 30px;
   padding-top: 25px;
   padding-bottom: 25px;
   padding-left: 100px;
-}
-.activity-icon {
 }
 
 .our-activity-list {
@@ -512,22 +510,30 @@ ul {
 .regular-customers-icon-list {
   display: flex;
 
+  width: 1170px;
+
   margin-left: auto;
   margin-right: auto;
 
   margin-top: 50px;
   padding-bottom: 94px;
 }
-
-.regular-customers-icon {
+.regular-customers-item {
   text-align: center;
   width: 170px;
-  height: 92px;
-  background-color: #d41111;
+
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  width: 170px;
+
   margin-right: 30px;
 }
-.regular-customers-icon:last-child {
+
+.regular-customers-item:last-child {
   margin-right: 0;
+}
+.regular-customers-icon {
+  padding-top: 32px;
 }
 
 .regular-customers-titel {
