--- a/css/styles.css
+++ b/css/styles.css
@@ -506,7 +506,7 @@ ul {
   align-items: center;
   width: 44px;
   height: 44px;
-  background-color: #dd3535;
+  background-color: #fff;
   border-radius: 50%;
 }
 .social-link-accent {
@@ -523,6 +523,9 @@ ul {
 }
 .social-link:focus {
   background-color: var(--accent-color);
+}
+.regular-costumers-icon {
+  fill: #afb1b8;
 }
 
 /* Regular customers  */
@@ -552,6 +555,14 @@ ul {
 
   margin-right: 30px;
 }
+.regular-customers-item:hover {
+  text-align: center;
+  width: 170px;
+
+  border: 1px solid var(--accent-color);
+  border-radius: 4px;
+  width: 170px;
+}
 
 .regular-customers-item:last-child {
   margin-right: 0;
@@ -559,10 +570,28 @@ ul {
 .regular-costumers-icon {
   fill: #afb1b8;
 }
-
+.regular-costumers-icon-accent {
+  fill: var(--accent-color);
+}
+.regular-costumers-icon:hover {
+  fill: var(--accent-color);
+}
+.regular-costumers-icon:focus {
+  fill: var(--accent-color);
+}
 .regular-customers-icon {
   fill: #afb1b8;
   padding-top: 32px;
+}
+.regular-customers-item-accent {
+  text-align: center;
+  width: 170px;
+
+  border: 1px solid var(--accent-color);
+  border-radius: 4px;
+  width: 170px;
+
+  margin-right: 30px;
 }
 
 .regular-customers-titel {
@@ -658,20 +687,29 @@ ul {
 }
 .footer-social-link-list {
   display: flex;
-  justify-content: space-around;
+  align-items: baseline;
   width: 206px;
-
-  /* display: flex;
-  justify-content: center;
-  width: 206px;
-  margin-left: auto;
-  margin-right: auto; */
 }
-.footer-social-icon {
-  fill: #fff;
+.footer-social-link-item {
   margin-right: 10px;
 }
+
 .footer-social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+.footer-social-link:hover {
+  background-color: var(--accent-color);
+}
+.footer-social-link:focus {
+  background-color: var(--accent-color);
+}
+.footer-social-link-accent {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -679,6 +717,9 @@ ul {
   height: 44px;
   background-color: var(--accent-color);
   border-radius: 50%;
+}
+.footer-social-icon {
+  fill: #fff;
 }
 
 /* portfolio */
