--- a/css/styles.css
+++ b/css/styles.css
@@ -506,7 +506,7 @@ ul {
   align-items: center;
   width: 44px;
   height: 44px;
-  background-color: #fff;
+  /* background-color: #fff; */
   border-radius: 50%;
 }
 .social-link-accent {
@@ -524,7 +524,7 @@ ul {
 .social-link:focus {
   background-color: var(--accent-color);
 }
-.regular-costumers-icon {
+.team-members-icon {
   fill: #afb1b8;
 }
 
