--- a/css/styles.css
+++ b/css/styles.css
@@ -908,20 +908,14 @@ ul {
   border-radius: 4px;
 }
 /* Portfolio items */
-
-.portfoli-item-link {
-  text-decoration: none;
-}
-
-.portfolio-items-list {
+.pirtfolio-item-list {
   display: flex;
   flex-wrap: wrap;
 }
-.portfolio-item {
+.pirtfolio-item {
   width: 370px;
-
-  margin-bottom: 30px;
   margin-right: 30px;
+  margin-bottom: 30px;
 }
 
 .portfolio-item:nth-last-child(3n + 1) {
