--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ ul {
   margin-right: 0;
 }
 
-.header-link-accent {
+.header-link-nav-accent {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -115,7 +115,7 @@ ul {
   letter-spacing: 0.28px;
 }
 
-.header-link {
+.header-link-nav{
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -160,29 +160,33 @@ ul {
   color: var(--secondary-text-color);
 }
 
-/* .header-link-last:hover {
-  color: var(--accent-color);
-} */
-/* .header-link-last:focus {
-  color: var(--accent-color);
-} */
-.header-link:hover {
+
+
+.header-link-nav-accent:hover {
   color: var(--accent-color);
 }
-.header-link:focus {
+.header-link-nav-accent:focus {
+  color: var(--accent-color);
+}
+.header-link-nav:hover {
+  color: var(--accent-color);
+}
+.header-link-nav:focus {
   color: var(--accent-color);
 }
 
-.header-link-accent:hover {
-  color: var(--accent-color);
-}
-.header-link-accent:focus {
-  color: var(--accent-color);
-}
+
+
 .header-link-mail:hover {
   color: var(--accent-color);
 }
 .header-link-mail:focus {
+  color: var(--accent-color);
+}
+.header-link-mail:hover .header-icon {
+fill: var(--accent-color);
+}
+.header-link-mail:focus .header-icon{
   color: var(--accent-color);
 }
 
@@ -192,12 +196,13 @@ ul {
 .header-link-phone:focus {
   color: var(--accent-color);
 }
-.header-icon:hover{
-  color: var(--accent-color);
+
+.header-icon :focus{
+fill: var(--accent-color);
 }
-.header-icon:focus{
-  color: var(--accent-color);
-}
+
+
+
 
 /* Header icons */
 .header-link {
@@ -208,9 +213,7 @@ ul {
   margin-right: 10px;
   fill: var(--secondary-text-color);
 }
-.header-link:hover .header-icon {
-  fill: var(--accent-color);
-}
+
 /* Hero */
 .hero-section {
   max-width: 1600px;
@@ -512,6 +515,7 @@ ul {
 
   width: 206px;
 
+  margin-top: 16px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -519,7 +523,7 @@ ul {
 .team-social-link-item {
   text-align: center;
 
-  margin-top: 16px;
+
   margin-right: 10px;
 }
 .team-social-link-item:last-child {
@@ -569,15 +573,15 @@ ul {
   margin-right: auto;
 
   margin-top: 50px;
-  padding-bottom: 94px;
+
 }
 .regular-customers-item {
   text-align: center;
   width: 170px;
+  height: 92px;
 
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  width: 170px;
 
   margin-right: 30px;
 }
@@ -596,9 +600,7 @@ ul {
 .regular-costumers-icon {
   fill: #afb1b8;
 }
-.regular-costumers-icon-accent {
-  fill: var(--accent-color);
-}
+
 .regular-costumers-icon:hover {
   fill: var(--accent-color);
 }
@@ -609,16 +611,7 @@ ul {
   fill: #afb1b8;
   padding-top: 32px;
 }
-.regular-customers-item-accent {
-  text-align: center;
-  width: 170px;
 
-  border: 1px solid var(--accent-color);
-  border-radius: 4px;
-  width: 170px;
-
-  margin-right: 30px;
-}
 
 .regular-customers-titel {
   font-family: var(--main-font);
