--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,7 @@ ul {
   margin-left: auto;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .group-link {
   margin-right: 50px;
@@ -142,8 +143,7 @@ ul {
 
 .header-link-mail {
   text-decoration: none;
-  width: 135px;
-  height: 16px;
+ 
   font-family: var(--main-font);
   font-weight: 500;
   letter-spacing: 0.02em;
@@ -206,10 +206,13 @@ fill: var(--accent-color);
 
 /* Header icons */
 .header-link {
-  display: contents;
+
+  /* align-items: center;
+  justify-content: center; */
 }
 
 .header-icon {
+
   margin-right: 10px;
   fill: var(--secondary-text-color);
 }
@@ -714,7 +717,7 @@ fill: var(--accent-color);
 /* Footer icons */
 
 .footer-icon-link-title {
-  /* width: 116px; */
+
   font-family: var(--secondary-font);
   font-weight: 700;
   font-size: 14px;
@@ -795,6 +798,8 @@ fill:white;
   letter-spacing: 0.28px;
 }
 
+
+
 .portfolio-header-link:hover {
   color: var(--accent-color);
 }
@@ -814,12 +819,8 @@ fill:white;
   color: var(--accent-color);
 }
 
-.portfolio-links-list-accent:hover {
-  font-family: var(--main-font);
-}
-.portfolio-links-list-accent:focus {
-  font-family: var(--main-font);
-}
+
+
 
 /* Portfolio section */
 .portfolio-section {
@@ -867,7 +868,7 @@ fill:white;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08),
     0 3px 1px 0 rgba(0, 0, 0, 0.1);
 
-  /* border-radius: 4px; */
+
 }
 .filters-items-button:focus {
   background: var(--accent-color);
@@ -875,8 +876,7 @@ fill:white;
 
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08),
     0 3px 1px 0 rgba(0, 0, 0, 0.1);
-/* 
-  border-radius: 4px; */
+
 }
 
 .filters-items-button-accent {
@@ -887,7 +887,7 @@ fill:white;
   letter-spacing: 0.03em;
   text-align: center;
   color: var(--main-text-color);
-  /* border-radius: 4px; */
+  border-radius: 4px;
 
   background: var(--accent-color);
   color: #fff;
@@ -904,7 +904,6 @@ fill:white;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08),
     0 3px 1px 0 rgba(0, 0, 0, 0.1);
 
-  /* border-radius: 4px; */
 }
 .filters-items-button-accent:focus {
   background: var(--accent-color);
@@ -913,7 +912,6 @@ fill:white;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08),
     0 3px 1px 0 rgba(0, 0, 0, 0.1);
 
-  /* border-radius: 4px; */
 }
 /* Portfolio items */
 
@@ -938,20 +936,29 @@ fill:white;
 .portfolio-item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
-.portfolio-item:hover {
+/* .portfolio-item-link{
+display: block;
+}
+.portfolio-item-blok{
+display: block;
+} */
+.portfolio-item-blok:hover{
+display: block;
+box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.06),
+  0 1px 1px 0 rgba(0, 0, 0, 0.12);
+background: #fff;
+border: 1px solid #eee;
+width: 370px;
+}
+.portfolio-item-blok:focus {
+  display: block;
   box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.06),
     0 1px 1px 0 rgba(0, 0, 0, 0.12);
   background: #fff;
   border: 1px solid #eee;
   width: 370px;
 }
-.portfolio-item:focus {
-  box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.06),
-    0 1px 1px 0 rgba(0, 0, 0, 0.12);
-  background: #fff;
-  border: 1px solid #eee;
-  width: 370px;
-}
+
 
 .portfolio-item-title {
   border-left: 1px solid #eee;
@@ -964,6 +971,7 @@ fill:white;
 }
 
 .portfolio-product-name {
+  text-decoration: none;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -973,6 +981,7 @@ fill:white;
   margin-bottom: 4px;
 }
 .portfolio-product {
+  text-decoration: none;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
