--- a/css/styles.css
+++ b/css/styles.css
@@ -578,8 +578,9 @@ fill: var(--accent-color);
 
   margin-left: auto;
   margin-right: auto;
-
   margin-top: 50px;
+
+
 
 }
 .regular-customers-item {
@@ -613,6 +614,8 @@ fill: var(--accent-color);
 display: flex;
 align-items: center;
 justify-content: center;
+border: 1px solid #afb1b8;
+  border-radius: 4px;
 }
 
 
@@ -623,11 +626,12 @@ justify-content: center;
   fill: var(--accent-color);
 }
 
-
-.regular-costumers-icon-link:focus .regular-costumers-icon-item{
+ .regular-costumers-icon-link:focus .regular-costumers-icon-item{
 
 fill: var(--accent-color);
-}
+} 
+
+
 
 
 
