--- a/css/styles.css
+++ b/css/styles.css
@@ -584,9 +584,10 @@ fill: var(--accent-color);
 
 }
 .regular-customers-item {
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
+  flex-basis: calc((100% - 6*30px)/6);
   width: 170px;
   height: 92px;
 
@@ -595,32 +596,33 @@ fill: var(--accent-color);
 
   margin-right: 30px;
 }
-.regular-customers-item:hover {
-  text-align: center;
- 
-
-  border: 1px solid var(--accent-color);
-  border-radius: 4px;
-  width: 170px;
-}
 
 .regular-customers-item:last-child {
   margin-right: 0;
 }
+
 .regular-costumers-icon {
   fill: #afb1b8;
 }
+
 .regular-costumers-icon-link{
 display: flex;
 align-items: center;
 justify-content: center;
-border: 1px solid #afb1b8;
-  border-radius: 4px;
+width: 100%;
+height: 100%;
+border: 1px solid var(--secondary-text-color);
+border-radius: 4px;
+
 }
 
 
 
 
+.regular-customers-item:hover {
+  border: 1px solid var(--accent-color);
+  border-radius: 4px;
+}
 
 .regular-customers-item:hover .regular-costumers-icon-item{
   fill: var(--accent-color);
@@ -628,8 +630,19 @@ border: 1px solid #afb1b8;
 
  .regular-costumers-icon-link:focus .regular-costumers-icon-item{
 
+
+border: 1px solid var(--accent-color);
+border-radius: 4px;
+
+
+
 fill: var(--accent-color);
 } 
+.regular-customers-item:focus {
+  border: 1px solid var(--accent-color);
+  border-radius: 4px;
+}
+
 
 
 
