--- a/css/styles.css
+++ b/css/styles.css
@@ -572,14 +572,10 @@ color: var(--accent-color);
   margin-top: 50px;
 }
 .regular-customers-item {
-  /* display: flex;
-  align-items: center;
-  justify-content: center; */
-  flex-basis: calc((100% - 6 * 30px) / 6);
   width: 170px;
   height: 92px;
 
-  border: 1px solid #afb1b8;
+
   border-radius: 4px;
 
   margin-right: 30px;
@@ -643,6 +639,9 @@ color: var(--accent-color);
   display: flex;
   align-items: baseline;
 }
+.footer-main-container{
+margin-right: 70px;
+}
 .logo-footer {
   display: block;
   text-decoration: none;
@@ -666,7 +665,7 @@ color: var(--accent-color);
 .footer-text {
   font-style: normal;
   color: #fff;
-  margin-right: 70px;
+
 
   letter-spacing: 0.42px;
 
@@ -717,8 +716,12 @@ color: var(--accent-color);
   display: flex;
   align-items: baseline;
 }
-.footer-social-link-item {
-  margin-right: 10px;
+
+.footer-social-link-item{
+margin-right: 10px;
+}
+.footer-social-link-item:last-child {
+  margin-right: 0;
 }
 
 .footer-social-link {
@@ -925,9 +928,16 @@ color: var(--accent-color);
 }
 
 .portfoli-item-link {
-  /* display: block; */
+  display: block;
   text-decoration: none;
 }
+.portfoli-item-link:hover{
+  display: block;
+  box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.06),
+  0 1px 1px 0 rgba(0, 0, 0, 0.12);
+background: #fff;
+border: 1px solid #eee;
+} 
 
 .portfolio-item-title {
   border-left: 1px solid #eee;
