--- a/css/styles.css
+++ b/css/styles.css
@@ -280,10 +280,10 @@ color: var(--accent-color);
   justify-content: center;
   border-radius: 4px;
   width: 270px;
+  height: 120px;
   background: #f5f4fa;
   margin-bottom: 30px;
-  padding-top: 25px;
-  padding-bottom: 25px;
+
   fill: #212121;
 }
 /* ================== */
@@ -512,7 +512,7 @@ color: var(--accent-color);
   display: flex;
   justify-content: center;
 
-  width: 206px;
+
 
   margin-top: 16px;
   margin-left: auto;
