Update css and portfolio

--- a/css/styles.css
+++ b/css/styles.css
@@ -914,24 +914,20 @@ margin-right: 10px;
   margin-bottom: 0;
 }
 
-.portfolio-item-blok:hover {
-  box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.06),
-    0 1px 1px 0 rgba(0, 0, 0, 0.12);
-  background: #fff;
-  border: 1px solid #eee;
-}
-.portfolio-item-blok:focus {
-  box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.06),
-    0 1px 1px 0 rgba(0, 0, 0, 0.12);
-  background: #fff;
-  border: 1px solid #eee;
-}
 
 .portfoli-item-link {
   display: block;
   text-decoration: none;
 }
 .portfoli-item-link:hover{
+  display: block;
+  box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.06),
+  0 1px 1px 0 rgba(0, 0, 0, 0.12);
+background: #fff;
+border: 1px solid #eee;
+} 
+
+.portfoli-item-link:focus{
   display: block;
   box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.06),
   0 1px 1px 0 rgba(0, 0, 0, 0.12);
